wrap long links to make sure they display in full

--- a/css/mail.css
+++ b/css/mail.css
@@ -219,6 +219,7 @@ button.control {
 .mail-message-body a {
     color: #07d;
     border-bottom: 1px dotted #07d;
+    word-wrap: break-word;
 }
 
 
